@@ -915,6 +915,112 @@ __Icon Button|Icon</code>
     </div>
   </div>
 <!-- -->
+  <div class="ui basic segment">
+    <h4 id="vertically-attached" class="ui header">Vertically Attached</h4>
+    <p>A button can be attached to the top or bottom of other content</p>
+  </div>
+<!-- -->
+  <div class="ui divided segment grid">
+    <div class="ui attached segment">
+      <div class="ui top attached label">Vertically Attached</div>
+    </div>
+<!-- -->
+    <div class="ui center aligned six wide column">
+      <h5 class="ui header">Preview</h5>
+      <div class="ui top attached focusable button" tabindex="0">Top</div>
+      <div class="ui attached segment">
+        <p></p>
+      </div>
+      <div class="ui bottom attached focusable button" tabindex="0">Bottom</div>
+    </div>
+<!-- -->
+    <div class="ui left aligned ten wide column">
+      <h5 class="ui header">Markdown Syntax</h5>
+      <div class="ui inverted very padded segment">
+        <code>__Top Attached Focusable Button|Top__</code>
+        <br />
+        <code></code>
+        <br />
+        <code>&gt; Attached Segment:</code>
+        <br />
+        <code>&gt; " "</code>
+        <br />
+        <code></code>
+        <br />
+        <code>__Bottom Attached Focusable Button|Bottom__</code>
+        <br />
+      </div>
+    </div>
+<!-- -->
+    <div class="ui center aligned six wide column">
+      <h5 class="ui header">Preview</h5>
+      <div class="ui two top attached buttons">
+        <button class="ui button">One</button>
+        <button class="ui button">Two</button>
+      </div>
+<!-- -->
+      <div class="ui attached segment">
+        <p></p>
+      </div>
+<!-- -->
+      <div class="ui two bottom attached buttons">
+        <button class="ui button">One</button>
+        <button class="ui button">Two</button>
+      </div>
+    </div>
+<!-- -->
+    <div class="ui left aligned ten wide column">
+      <h5 class="ui header">Markdown Syntax</h5>
+      <div class="ui inverted very padded segment">
+        <code>&gt; Two Top Attached Buttons:</code>
+        <br />
+        <code>&gt; __Button|One__</code>
+        <br />
+        <code>&gt; __Button|Two__</code>
+        <br />
+        <code></code>
+        <br />
+        <code>&lt;!-- --&gt;</code>
+        <br />
+        <code></code>
+        <br />
+        <code>&gt; Two Bottom Attached Buttons:</code>
+        <br />
+        <code>&gt; __Button|One__</code>
+        <br />
+        <code>&gt; __Button|Two__</code>
+        <br />
+      </div>
+    </div>
+<!-- -->
+  </div>
+<!-- -->
+  <div class="ui basic segment">
+    <h4 id="horizontally-attached" class="ui header">Horizontally Attached</h4>
+    <p>A button can be attached to the left or right of other content</p>
+  </div>
+<!-- -->
+  <div class="ui divided segment grid">
+    <div class="ui attached segment">
+      <div class="ui top attached label">Horizontally Attached</div>
+    </div>
+<!-- -->
+    <div class="ui center aligned six wide column">
+      <h5 class="ui header">Preview</h5>
+      <button class="ui left attached button">Left</button>
+      <button class="ui right attached button">Right</button>
+    </div>
+<!-- -->
+    <div class="ui left aligned ten wide column">
+      <h5 class="ui header">Markdown Syntax</h5>
+      <div class="ui inverted very padded segment">
+        <code>__Left Attached Button|Left__</code>
+        <br />
+        <code>__Right Attached Button|Right__</code>
+      </div>
+    </div>
+  </div>
+<!-- -->
 </div>
 
 </body>
