@@ -83,7 +83,11 @@
 ,
 <a class="ui item" href="button.html#fluid">Fluid</a>
 ,
-<a class="ui item" href="button.html#circular">Circular</a></div>
+<a class="ui item" href="button.html#circular">Circular</a>
+,
+<a class="ui item" href="button.html#vertically-attached">Vertically Attached</a>
+,
+<a class="ui item" href="button.html#horizontally-attached">Horizontally Attached</a></div>
     </div>
   </div>
 </div>
