@@ -9,6 +9,9 @@
     - Negative
     - Fluid
     - Circular
+    - Vertically Attached
+    - Vertically Attached Variation 2
+    - Horizontally Attached
 
 0.1.8 - 08-12-15
   * <button> tag added
